--- a/css/Pages/blog.css
+++ b/css/Pages/blog.css
@@ -44,6 +44,7 @@
   display: block;
   transition: transform 0.3s ease-in-out;
 }
+
 .post-image-link:hover {
   transform: scale(1.05);
 }
@@ -234,6 +235,7 @@
   padding: 20px;
   border-top: 1px solid #eee;
 }
+
 .archive-list {
   list-style: none;
   padding: 0;
@@ -289,23 +291,49 @@
   border-color: #bbb;
   color: #333;
 }
-/* @media (max-width: 991px)
-{
-  .blog-container
-  {
+
+@media (max-width: 991px) {
+  .blog-container {
     flex-direction: column;
   }
-  .blog-title
-  {
-    width: 100%;
-    
-  }
-  .sidebar
-  {
 
+  .blog-title {
+    padding: 30px 0;
+    font-size: 28px;
+  }
+
+  .sidebar {
+    padding: 15px;
   }
 }
-@media (max-width: 767px)
-{
 
-} */
+@media (max-width: 767px) {
+  .blog-title {
+    padding: 20px 0;
+    font-size: 24px;
+  }
+
+  .blog-container {
+    padding: 0 10px;
+  }
+
+  .blog-post {
+    width: 100%;
+  }
+
+  .sidebar {
+    padding: 10px;
+    border-left: none;
+  }
+
+  .pagination-button {
+    width: 25px;
+    height: 25px;
+    font-size: 0.8em;
+  }
+
+  .post-title-link {
+    font-size: 18px;
+  
+  }
+}
